# prisma-v2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_2026-06-20.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  PRISMA_V3_ANNOTATED_v33.md  QUALITY_IMPROVEMENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  spec.md  task.md
.github/workflows/: cd-render.yml  ci.yml  daily-data-seed.yml  e2e.yml  historical-seed.yml  llm-smoke.yml  release.yml  v4-operations-worker.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.vite/vitest/: results.json
backend/: config.py
backend/alembic/: env.py
backend/domain/: cost_summary.py  errors.py  llm_pricing.py
backend/scripts/: crypto_daily_snapshot.py  data_steward_run.py  seed_index_constituents.py  stock_daily_snapshot.py
backend/tests/: conftest.py  synthetic_prices.py
docs/: AGENT_CONTEXT.md  AI-USAGE.md  BACKEND_AUDIT_2026-06-17.md  DEMO-SCRIPT.md  DEPLOYMENT_v4.md  OPEN_ITEMS.md  PRISMA_V35_MASTERPLAN.md  PRISMA_V3_ANNOTATED_v33.md  PRISMA_V3_ML_BEFUNDE.md  PRISMA_V3_NEUE_ANSAETZE_UND_DATEN.md  PRISMA_V3_VERLAUF_UND_ENTSCHEIDUNGEN.md  PRISMA_V4-1_PHASENPLAN_Signal-Engine.md  PRISMA_V4_AGENTS.md  PRISMA_V4_FORTSCHRITT.md  PRISMA_V4_PROJEKTPLAN.md  RENDER_SETUP_ANLEITUNG.md  audit-fix-plan-2026-06-13.md  audit-terminal2-2026-06-13.md  crypto-extension-test-report-2026-06-17.md  dataset_coverage.md  getting-started.md  ml-training.md  ml_eval.md  ml_eval_crypto.md  ml_eval_crypto_v2.md  signal_backtest.md
docs/adr/: 0001-tech-stack.md  0002-llm-provider-choice.md  0003-narrative-engine-decisions.md  0004-multi-agent-framework-and-ops.md  0005-data-source-quant-fundamentals.md  0005-quant-models-redesign.md  0006-quant-models-redesign.md  0007-alembic-migration-merge-strategy.md  0008-ml-training-data-strategy.md  0009-datenpipeline-github-actions.md
docs/audits/: 2026-07-01-tiefen-audit.md  AUDIT_RENDER_LIVE_2026-06-17.md  RENDER_DEPLOY_BEFUND_2026-06-18.md  go-live-audit-2026-06-16.md
docs/examples/: research-memo-sample.json
docs/pitch/: viac-prisma-v2-pitch-deck.md
docs/research/: BTC-USD.csv  ETH-USD.csv  indicator_backtest.py  indicator_results.txt  poc_feasibility.py  poc_results.txt
docs/specs/: 2026-04-21-prisma-capstone-design.md  2026-04-21-prisma-v2-design.md  2026-04-25-budget-cap.md  2026-04-27-quant-models-redesign.md  2026-04-28-mcp-server.md  2026-04-28-multi-agent-research.md  2026-04-28-narrative-engine.md  2026-04-28-quant-mvp-models.md  2026-04-30-narrative-engine-foundation-plan.md  2026-04-30-narrative-engine-foundation.md  2026-05-04-narrative-engine-single-memo-plan.md  2026-05-04-narrative-engine-single-memo.md  2026-05-08-narrative-engine-multi-memo-batch-plan.md  2026-05-08-narrative-engine-multi-memo-batch.md  2026-05-09-ranking-service-multi-model-plan.md  2026-05-09-ranking-service-multi-model.md  2026-05-10-narrative-engine-en-template-plan.md  2026-05-10-narrative-engine-en-template.md  2026-05-11-mcp-server-slice-1-plan.md  2026-05-11-mcp-server-slice-1-skeleton.md  2026-05-11-rag-pipeline-slice-1-foundation.md  2026-05-11-rag-pipeline-slice-1-plan.md  2026-05-12-backtest-service-light.md  2026-05-13-universe-endpoints-frontend.md  2026-05-14-narrative-followups-66-67-plan.md  2026-05-14-narrative-followups-66-67.md  2026-05-17-ranking-ui-design.md  2026-05-17-ranking-ui-plan.md  2026-05-17-rankings-enhancements.md  2026-05-19-backtest-rebalancing-plan.md  2026-05-19-rag-context-narrative-plan.md  2026-05-19-rag-context-narrative.md  2026-05-19-rag-pipeline-slice-2-3-plan.md  2026-05-19-rag-pipeline-slice-2-3.md  2026-05-23-rankings-tooltips-design.md  2026-05-23-top10-leaderboard-design.md  2026-05-28-dashboard-stats-design.md  2026-05-28-llm-universe-wizard-design.md  2026-05-28-memo-drilldown-design.md  2026-05-29-run-history-design.md  (+19 more)
frontend/: .gitignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
frontend/app/: error.tsx  globals.css  layout.tsx  nav-links.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/components/: GuidedTour.tsx  (+8 more)
models/: crypto_dir_2026-06-20.joblib  crypto_excess_2026-06-20.joblib  crypto_meta_2026-06-20.json  crypto_v2_dir_2026-06-20.joblib  quantile_meta_2026-06-20.json  quantile_q10_2026-06-20.joblib  quantile_q50_2026-06-20.joblib  quantile_q90_2026-06-20.joblib  registry.json  return_predictor_latest.joblib  return_predictor_latest.json  return_predictor_lightgbm_20260612_120527.joblib  return_predictor_lightgbm_20260612_175826.joblib  return_predictor_lightgbm_20260613_094704.joblib  return_predictor_lightgbm_20260614_160223.joblib  return_predictor_lightgbm_20260614_160416.joblib  return_predictor_lightgbm_20260614_160815.joblib  return_predictor_xgboost_20260612_171721.joblib
prisma_v3_seed/: README_SEED.md  config_additions.py
scripts/: analyze_crypto_robustness.py  backend-start.sh  compare_sentiment_backtest.py  ingest_filings.py  ingest_swiss_filings.py  init-db.sql  llm_smoke_judge.py  portfolio_backtest.py  robustness_analysis.py  robustness_check.py  run_phase3_backtest.py  run_phase3_backtest_honest.py  run_phase3_backtest_ml.py  run_phase3_crypto_daily_wf.py  seed_admin.py  seed_crypto_audit_trail.py  seed_crypto_history.py  seed_demo_rag.py  seed_demo_universe.py  seed_estv_corpus.py  seed_fundamentals.py  seed_historical_prices.py  seed_index_constituents.py  seed_macro_rates.py  seed_smi_universe.py  seed_smim_universe.py  seed_spi_top50.py  seed_tech_catalog.py  smoke_narrative_batch_real_api.py  smoke_narrative_real_api.py  train_crypto_model.py  train_crypto_model_v2.py  train_quantile_model.py  train_return_predictor.py  update_smi_market_caps.py  verify_dataset_coverage.py  verify_smi_isins.py
(+971 files in other folders)
