[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prisma-backend"
version = "0.1.0"
description = "PRISMA — quantitative stock-selection backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "anthropic>=0.25",
    "jinja2>=3.1",
    "voyageai>=0.2",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "scipy>=1.13",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "joblib>=1.3",
    "shap>=0.45",
    "pypdf>=4.0",
    "mcp>=1.2",
    "httpx>=0.27",
    "weasyprint>=62.0",
    "apscheduler>=3.10",
    "ta>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    # Pinned exactly to match .pre-commit-config.yaml — avoids drift
    # between local Docker, local pre-commit, and CI.
    "ruff==0.15.11",
    "mypy>=1.10",
    "aiosqlite>=0.20",
    # ta — technical analysis reference for indicator cross-validation tests
    "ta>=0.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI's canonical pattern uses Depends() in default args;
# we accept this convention repo-wide.
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["backend/alembic/"]

[[tool.mypy.overrides]]
module = [
    "backend.tests.*",
    "backend.tests.unit.*",
    "backend.tests.unit.application.*",
    "backend.tests.unit.domain.*",
    "backend.tests.unit.domain.entities.*",
    "backend.tests.integration.*",
    "backend.tests.integration.*.*",
]
disallow_untyped_defs = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
addopts = "--tb=short"
markers = [
    "unit: fast unit tests, no I/O",
    "integration: requires database or HTTP",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/tests/*",
    "backend/alembic/*",
    "backend/__init__.py",
    # External API adapters — require live credentials, not unit-testable
    "backend/infrastructure/adapters/simfin_adapter.py",
    # SQLAlchemy ORM model files — pure column declarations, no logic
    "backend/infrastructure/persistence/models/ml_features.py",
    "backend/infrastructure/persistence/models/news.py",
    "backend/infrastructure/persistence/models/swiss_filing.py",
    # Repositories without tests yet (added in ML training sprint)
    "backend/infrastructure/persistence/repositories/news_repository.py",
    "backend/infrastructure/persistence/repositories/swiss_filing_repository.py",
    # MCP server entry point — tested via integration, not unit tests
    "backend/interfaces/mcp/server.py",
]
branch = false

[tool.coverage.report]
# Spec 2026-04-21-prisma-capstone-design.md §14.5 (Z. 660) + §17 Wo 11 (Z. 764):
# "Coverage ≥80% in CI sichtbar" — als CI-Gate gegen Regressions.
fail_under = 80
show_missing = true
skip_covered = false
precision = 1
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "if __name__ == .__main__.:",
]
